[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arch-video-workflow"
version = "1.0.0"
description = "Automated architectural presentation video workflow: text → multi-clip → final cut"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "arch-video-workflow", email = "noreply@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "moviepy>=1.0.3",
    "Pillow>=10.0.0",
    "openai>=1.0.0",
]

[project.scripts]
arch-video = "arch_video.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
